@@ -581,6 +581,11 @@ not supported very well at this point. In case of you don't want to
 have the capital version of a letter in a particular case, just hit 
 undo (Ctrl + z in most cases). 
 
+\subsubsection{Add a wizard icon to Geany's main toolbar}
+This adds an icon for Geany\LaTeX{} wizard to Geany's main toolbar
+so its easy to access via mouse even the toolbar of Geany\LaTeX{} is
+not active and the tools menu is a way to far away.
+
 \subsubsection{Modus of autocompletion}
 \label{sec:modus_of_autocompletion}
 Here you can choose, whether the Geany\LaTeX{} should do some
